<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.vadim.flatpay.ScrollingActivity">

    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/addNewData"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/deleteLastData"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_send_message"
        android:title="@string/generateMessage"
        android:icon="@android:drawable/ic_menu_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_rates"
        android:orderInCategory="100"
        android:title="@string/menu_rates"
        app:showAsAction="never" />
</menu>
